# Proyecto1_SO

./: .gitignore  Cargo.toml  TODO.md  kickoff.md
mypthreads/: Cargo.toml
mypthreads/src/: api_context.rs  api_rust.rs  channels.rs  context_wrapper.rs  ffi.rs  lib.rs  mutex.rs  mypthreads_api.rs  runtime.rs  runtime_v2.rs  sched.rs  signals.rs  sync.rs  thread.rs  thread_data.rs  thread_v2.rs
mypthreads/tests/: api_tests.rs  scheduler_test.rs  test_context.rs  test_context_v2.rs  test_integration_tests.rs
threadcity/: Cargo.toml  build_errors.txt
threadcity-ui/: Cargo.toml
threadcity-ui/src/: app.rs  event_queue.rs  main.rs  renderer.rs  simulation.rs  state.rs  ui.rs  ui_logger.rs
threadcity-ui/src/ui/: drawing.rs  event_queue.rs  layout.rs  mod.rs
threadcity/src/: cityconfig.rs  config.rs  lib.rs  log.rs  main.rs  runner.rs  sync.rs
threadcity/src/agents/: agent_controller.rs  ambulance.rs  boat.rs  car.rs  cargotruck.rs  mod.rs  vehicle.rs
threadcity/src/model/: bridge.rs  commerce.rs  coord.rs  grid.rs  mod.rs  nuclear.rs  river.rs  traffic.rs
threadcity/src/sim/: mod.rs  simulation.rs  spawner.rs
threadcity/tests/: debug_tests.rs  integration_tests.rs  sync_wrapper_and_mymutex_tests.rs
