[package]
name = "threadcity-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.10.2", package = "gtk4" }
glib = "0.21.4"
once_cell = "1"
threadcity = { path = "../threadcity" }
mypthreads = {path="../mypthreads"}
pangocairo = "0.21.2"
pango = "0.21.3"
rand = "0.9.2"
cairo = "0.0.4"
